syntax = "proto3";

package nat.pb;

enum NatMsgType {
    BootStrapReg    = 0;
    KeepAlive       = 1;
    Connect         = 2;
    Ping            = 3;
}

enum NatType{
    NoNatDevice     = 0;
    BehindNat       = 1;
    CanBeNatServer  = 2;
    ToBeChecked     = 3;
}

message BootNatRegReq {
    string  nodeId      = 1;
    string  privatePort = 3;
    string  zone        = 4;
    string  privateIp   = 2;
}

message BootNatRegRes {
    NatType natType    = 1;
    string  nodeId      = 2;
    string  publicIp    = 3;
    string  publicPort  = 4;
    string  zone        = 5;
}


message NatConReq {
    string FromPeerId   = 1;
    string ToPeerId     = 2;
}

message NatConRes {
    string peerId       = 2;
    string publicIp     = 3;
    string publicPort   = 4;
    string privateIp    = 5;
    string privatePort  = 6;
}

message NatKeepAlive {
    string nodeId = 1;
}

message NatPing {
    string ping = 1;
    string pong = 2;
}

message NatRequest {
    NatMsgType msgType          = 1;
    BootNatRegReq BootRegReq    = 2;
    NatConReq connReq           = 3;
    NatKeepAlive keepAlive      = 4;
    NatPing ping                = 5;
}

message response {
    NatMsgType msgType          = 1;
    BootNatRegRes BootRegRes    = 2;
    NatConRes connRes           = 3;
    NatKeepAlive keepAlive      = 4;
    NatPing pong                = 5;
}